# arc-ilp

./: README.md  pyproject.toml  ruff.toml
Popper/: memory.md
Popper/examples/memory-trains/: combiner.pkl
Popper/popper/: gen2.py  loop.py  util.py
data/: solvable.txt
data/rulesets/: default.txt  simple.txt
src/: config.py  main.py  prolog.py  solve.py
src/pl/: bias.pl  bk_facts.pl  bk_rules.pl  grounder.pl  groundings.txt
